<resources>
    <string name="app_name">Decoration</string>
    <string name="db_name">MyApplicationDataBase</string>
    <string name="main_select_role">Select Role</string>
    <string name="main_admin">Admin</string>
    <string name="main_store_owner">Store Owner</string>
    <string name="main_customer">Customer</string>
    <string name="main_worker">Worker</string>

    <string name="username">Username</string>
    <string name="username_error_empty">Please insert your username</string>
    <string name="password">Password</string>
    <string name="password_error_empty">Please insert your password</string>
    <string name="password_error_format">Password must be at least 3 characters</string>

    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="no_admin_registered">No Admin Registered !</string>
    <string name="no_worker_registered">No Worker Registered !</string>
    <string name="no_customer_registered">No Customer Registered !</string>
    <string name="no_owner_registered">No Owner Registered !</string>

    <string name="title_activity_store_owner">Owner</string>
    <string name="title_requests">Requests</string>
    <string name="no_requests">No Requests !</string>
    <string name="title_activity_owner">Owner</string>

    <string name="title_wallpapers">WallPapers</string>
    <string name="add_wallpaper">Add Wallpaper</string>
    <string name="add_image">Add Image</string>
    <string name="no_wallpapers">No wallpapers added !</string>

    <string name="title_decorative">Decorative Elements</string>
    <string name="add_decorative">Add Decorative</string>
    <string name="no_decorative">No decorative elements added !</string>

    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="specifications">Specifications</string>
    <string name="price_error">Please add price</string>
    <string name="quantity_error">Please add quantity</string>
    <string name="specifications_error">Please add specifications</string>

    <string name="title_activity_admin">Admin</string>
    <string name="title_owners">Owners</string>
    <string name="title_workers">Workers</string>
    <string name="title_orders">Orders</string>

    <string name="title_activity_worker">Worker</string>
    <string name="title_reviews">Reviews</string>

    <string name="no_orders">No Orders</string>
    <string name="title_activity_customer">Customer</string>
    <string name="select_request">Select Request</string>
    <string name="make_order">Make Order</string>

    <string name="add_special_request">Add Special Request</string>
    <string name="special_request">Special Request</string>

</resources>