<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_customer_wallpapers"
        android:icon="@drawable/ic_wallpaper"
        android:title="@string/title_workers" />

    <item
        android:id="@+id/navigation_customer_decoratives"
        android:icon="@drawable/ic_decorative"
        android:title="@string/title_decorative" />

    <item
        android:id="@+id/navigation_customer_workers"
        android:icon="@drawable/ic_worker"
        android:title="@string/title_workers" />
    <item
        android:id="@+id/navigation_customer_requests"
        android:icon="@drawable/ic_request"
        android:title="@string/title_requests" />
<item
        android:id="@+id/navigation_customer_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders" />

</menu>