<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallpapers">

    <fragment
        android:id="@+id/navigation_wallpapers"
        android:name="com.fatmanaseer.decoration.presentation.owner.ui.wallPapers.WallPapersFragment"
        android:label="@string/title_wallpapers"
        tools:layout="@layout/fragment_wallpapers" />

    <fragment
        android:id="@+id/navigation_decorative"
        android:name="com.fatmanaseer.decoration.presentation.owner.ui.decorative.DecorativeFragment"
        android:label="@string/title_decorative"
        tools:layout="@layout/fragment_decorative" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.fatmanaseer.decoration.presentation.owner.ui.requests.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />
</navigation>