<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.owner.ui.wallPapers.WallPapersFragment">

    <TableLayout
        android:id="@+id/addWallpaperContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wallpaperPriceET"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:digits="1234567890"
                android:hint="@string/price"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wallpaperQuantityET"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:digits="1234567890"
                android:hint="@string/quantity"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wallpaperSpecET"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/specifications"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:lines="2" />

        </TableRow>

        <TableRow android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/imageSelectedTV"
                android:layout_weight="1"
                android:gravity="center"
                android:text="no image added" />
        </TableRow>


        <TableRow android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addWallpaperImageBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_black_btn"
                android:drawableStart="@android:drawable/ic_menu_camera"
                android:text="@string/add_image"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addWallpaperBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_black_btn"
                android:drawableStart="@android:drawable/checkbox_on_background"
                android:text="@string/add_wallpaper"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noWallpapersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_wallpapers"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wallpapersRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addWallpaperContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>