<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/bg_dialog"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogUsernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/username"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/closeIV"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/black">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialogUsernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/password"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/dialogUsernameInput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialogPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogCreateAccountBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_btn"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>